# beataml2-pipeline

./: README.md  download_data.sh  pyproject.toml  requirements.txt
conf/base/: catalog.yml
conf/manual_download/: catalog.yaml
notebooks/: patients.ipynb
src/beataml2_pipeline/: __init__.py  __main__.py  settings.py
src/beataml2_pipeline/datasets/: anndata_dataset.py
src/beataml2_pipeline/pipelines/data_processing/: nodes.py  pipeline.py
