[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.11"
name = "beataml2_pipeline"
readme = "README.md"
dynamic = [ "version",]
dependencies = [
 "ipython>=8.10",
 "jupyterlab>=3.0",
 "notebook",
 "kedro~=0.19.9",
 "kedro[jupyter]",
 "kedro-datasets[pandas-csvdataset, pandas-exceldataset, pandas-parquetdataset, plotly-plotlydataset, plotly-jsondataset, matplotlib-matplotlibwriter]>=3.0",
 "kedro-viz>=6.7.0",
 "scikit-learn~=1.5.1",
 "seaborn>=0.12.1", # weird, ~= pins it and doesnt work with scanpy 1.10.3
 "anndata==0.10.8",
 "mudata>=0.2.4",
]

[project.scripts]
beataml2-pipeline = "beataml2_pipeline.__main__:main"

[tool.kedro]
package_name = "beataml2_pipeline"
project_name = "beataml2-pipeline"
kedro_init_version = "0.19.9"
tools = "['Kedro Viz']"
example_pipeline = "True"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "beataml2_pipeline.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[dependency-groups]
dev = [
    "ruff>=0.7.4",
]
